Began to add task tables and associated icons

--- a/scss/App.scss
+++ b/scss/App.scss
@@ -2,10 +2,11 @@
 
 $theme-colors: (
    "mint-cream": #f6fff8,
-   "cambridge-blue": #a4c3b2,
+   //    "cambridge-blue": #a4c3b2,
    "light-cyan": #cce3de,
    "wintergreen-dream": #6b9080,
-   "dark-gray": #343436
+   "dark-gray": #343436,
+   "deep-blue": #00449f
 );
 
 $font-size-base: 2rem;
