--- a/scss/App.scss
+++ b/scss/App.scss
@@ -6,10 +6,12 @@ $theme-colors: (
    "light-cyan": #cce3de,
    "wintergreen-dream": #6b9080,
    "dark-gray": #343436,
-   "deep-blue": #00449f
+   "deep-blue": #00449f,
+   "purple": #7a3061,
+   "light-yellow": #ffe9ae
 );
 
-$font-size-base: 2rem;
+$font-size-base: 1.25rem;
 
 /* import bootstrap to set changes */
 @import "../node_modules/bootstrap/scss/bootstrap";
@@ -92,18 +94,25 @@ button {
    border-radius: 30px;
 }
 
+.tracker {
+   border-top-left-radius: 30px;
+   margin-right: -30px;
+   padding: 0 70px 0 50px;
+}
+
+.tracker-bar {
+   border-bottom-right-radius: 30px;
+}
+
 //CHECKBOX
-ul.ks-cboxtags {
+.ks-cboxtags {
    list-style: none;
    padding: 20px;
-   li {
+   .task {
       display: block;
-      label {
+      .taskDescription {
          display: inline-block;
-         background-color: map.get(
-            $theme-colors,
-            "mint-cream"
-         );
+         background-color: map.get($theme-colors, "mint-cream");
          // border: 1px solid rgba(0, 0, 0,.1);
          color: map.get($theme-colors, "dark-gray");
 
@@ -122,7 +131,7 @@ ul.ks-cboxtags {
    }
 }
 
-ul.ks-cboxtags li label {
+.ks-cboxtags .task .taskDescription {
    position: relative;
    padding: 10px 20px;
    cursor: pointer;
@@ -136,34 +145,31 @@ ul.ks-cboxtags li label {
       font-weight: 900;
       font-size: 32px;
       padding: 0;
-      margin-right: 15px;
+      margin-right: 20px;
       content: "\f1db";
       color: rgba(0, 0, 0, 0.2);
       transition: transform 0.3s ease-in-out;
       position: absolute;
-      right: 20px;
+      right: 0;
       //   margin-top: 5px;
       @include transition(0.3s);
    }
 }
 
-ul.ks-cboxtags
-   li
-   input[type="checkbox"]:checked
-   + label::before {
+.ks-cboxtags .task input[type="checkbox"]:checked + .taskDescription::before {
    content: "\f058";
    transition: transform 0.3s ease-in-out;
-   color: map.get($theme-colors, "wintergreen-dream");
+   color: map.get($theme-colors, "purple");
 }
 
-ul.ks-cboxtags li input[type="checkbox"]:checked + label {
+.ks-cboxtags .task input[type="checkbox"]:checked + .taskDescription {
    transition: all 0.2s;
 }
 
-ul.ks-cboxtags li input[type="checkbox"] {
+.ks-cboxtags .task input[type="checkbox"] {
    display: absolute;
 }
-ul.ks-cboxtags li input[type="checkbox"] {
+.ks-cboxtags .task input[type="checkbox"] {
    position: absolute;
    opacity: 0;
 }
