Changed blue color

--- a/scss/App.scss
+++ b/scss/App.scss
@@ -13,7 +13,7 @@ $theme-colors: (
    "purple-dark": #663f76,
    "purple-medium": #9f6db0,
    "purple-light": #c1a2cd,
-   "blue-dark": #0d40bf,
+   "blue-dark": #0f46d2,
    "blue-medium": #4073f2,
    "blue-light": #8dabf7,
    "mint-cream": #f6fff8,
