--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
   --bs-purple-dark: #663f76;
   --bs-purple-medium: #9f6db0;
   --bs-purple-light: #c1a2cd;
-  --bs-blue-dark: #0d40bf;
+  --bs-blue-dark: #0f46d2;
   --bs-blue-medium: #4073f2;
   --bs-blue-light: #8dabf7;
   --bs-mint-cream: #f6fff8;
@@ -64,7 +64,7 @@
   --bs-purple-dark-rgb: 102, 63, 118;
   --bs-purple-medium-rgb: 159, 109, 176;
   --bs-purple-light-rgb: 193, 162, 205;
-  --bs-blue-dark-rgb: 13, 64, 191;
+  --bs-blue-dark-rgb: 15, 70, 210;
   --bs-blue-medium-rgb: 64, 115, 242;
   --bs-blue-light-rgb: 141, 171, 247;
   --bs-mint-cream-rgb: 246, 255, 248;
@@ -3074,19 +3074,19 @@ textarea.form-control-lg {
 
 .btn-blue-dark {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #0d40bf;
-  --bs-btn-border-color: #0d40bf;
+  --bs-btn-bg: #0f46d2;
+  --bs-btn-border-color: #0f46d2;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #0b36a2;
-  --bs-btn-hover-border-color: #0a3399;
-  --bs-btn-focus-shadow-rgb: 49, 93, 201;
+  --bs-btn-hover-bg: #0d3cb3;
+  --bs-btn-hover-border-color: #0c38a8;
+  --bs-btn-focus-shadow-rgb: 51, 98, 217;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #0a3399;
-  --bs-btn-active-border-color: #0a308f;
+  --bs-btn-active-bg: #0c38a8;
+  --bs-btn-active-border-color: #0b359e;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #0d40bf;
-  --bs-btn-disabled-border-color: #0d40bf;
+  --bs-btn-disabled-bg: #0f46d2;
+  --bs-btn-disabled-border-color: #0f46d2;
 }
 
 .btn-blue-medium {
@@ -3447,19 +3447,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-blue-dark {
-  --bs-btn-color: #0d40bf;
-  --bs-btn-border-color: #0d40bf;
+  --bs-btn-color: #0f46d2;
+  --bs-btn-border-color: #0f46d2;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #0d40bf;
-  --bs-btn-hover-border-color: #0d40bf;
-  --bs-btn-focus-shadow-rgb: 13, 64, 191;
+  --bs-btn-hover-bg: #0f46d2;
+  --bs-btn-hover-border-color: #0f46d2;
+  --bs-btn-focus-shadow-rgb: 15, 70, 210;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #0d40bf;
-  --bs-btn-active-border-color: #0d40bf;
+  --bs-btn-active-bg: #0f46d2;
+  --bs-btn-active-border-color: #0f46d2;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #0d40bf;
+  --bs-btn-disabled-color: #0f46d2;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #0d40bf;
+  --bs-btn-disabled-border-color: #0f46d2;
   --bs-gradient: none;
 }
 
@@ -5275,12 +5275,12 @@ textarea.form-control-lg {
 }
 
 .alert-blue-dark {
-  --bs-alert-color: #082673;
-  --bs-alert-bg: #cfd9f2;
-  --bs-alert-border-color: #b6c6ec;
+  --bs-alert-color: #092a7e;
+  --bs-alert-bg: #cfdaf6;
+  --bs-alert-border-color: #b7c8f2;
 }
 .alert-blue-dark .alert-link {
-  color: #061e5c;
+  color: #072265;
 }
 
 .alert-blue-medium {
@@ -5825,17 +5825,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-blue-dark {
-  color: #082673;
-  background-color: #cfd9f2;
+  color: #092a7e;
+  background-color: #cfdaf6;
 }
 .list-group-item-blue-dark.list-group-item-action:hover, .list-group-item-blue-dark.list-group-item-action:focus {
-  color: #082673;
-  background-color: #bac3da;
+  color: #092a7e;
+  background-color: #bac4dd;
 }
 .list-group-item-blue-dark.list-group-item-action.active {
   color: #fff;
-  background-color: #082673;
-  border-color: #082673;
+  background-color: #092a7e;
+  border-color: #092a7e;
 }
 
 .list-group-item-blue-medium {
@@ -7544,7 +7544,7 @@ textarea.form-control-lg {
 
 .text-bg-blue-dark {
   color: #fff !important;
-  background-color: RGBA(13, 64, 191, var(--bs-bg-opacity, 1)) !important;
+  background-color: RGBA(15, 70, 210, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-blue-medium {
@@ -7677,10 +7677,10 @@ textarea.form-control-lg {
 }
 
 .link-blue-dark {
-  color: #0d40bf !important;
+  color: #0f46d2 !important;
 }
 .link-blue-dark:hover, .link-blue-dark:focus {
-  color: #0a3399 !important;
+  color: #0c38a8 !important;
 }
 
 .link-blue-medium {
