Fix routines and rewards

--- a/src/components/Calendar.css
+++ b/src/components/Calendar.css
@@ -4,6 +4,8 @@
     --fc-today-bg-color: #2f2f2f;
     --fc-small-font-size: .75em;
     --fc-border-color: #727272;
+    --fc-button-bg-color: #29b6f6;
+    --fc-button-hover-bg-color: #29b6f6
 }
 
 .fc {
